<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_image"
            android:title="@string/add_image"
            app:showAsAction="always"
            android:icon="@drawable/ic_photo_library_white_24dp"/>
    <item
            android:id="@+id/copy_from_storage"
            android:title="@string/copy"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_content_copy_white_24dp"/>
    <item
            android:id="@+id/share_from_storage"
            android:title="@string/share_text"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_share_white_24dp"/>
    <item
            android:id="@+id/settings"
            android:title="@string/settings"/>

</menu>