<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="gtcl.dev.textreader.mainfragments.StorageFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:menu="@menu/main_menu"
            android:theme="@style/AppTheme.Toolbar"
            android:background="@color/colorPrimary"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:text="@string/result"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/result_text"
                            android:hint="@string/no_text"
                            android:autoLink="all"
                            android:background="@null"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:paddingTop="8dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:text="@string/image_preview"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <ImageView
                            android:id="@+id/image_preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxHeight="250dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>